--- a/Simulaciones.ipynb
+++ b/Simulaciones.ipynb
@@ -12,7 +12,7 @@
         "ImuX5T7hYoBA"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMbvdO8Taf3yvsvywRXEKP+",
+      "authorship_tag": "ABX9TyMLe7W5rDO9TSA4T5t3y5g2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2524,7 +2524,7 @@
         "outputId": "29c5f33d-9129-47b1-98d1-432baf611076",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 446
         }
       },
       "source": [
@@ -2596,7 +2596,7 @@
         "outputId": "d671d0be-1586-4387-ff22-2d9065cf91fc",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 446
         }
       },
       "source": [
@@ -8656,16 +8656,16 @@
       "metadata": {
         "colab_type": "code",
         "id": "pf9rV_bpxZsF",
-        "outputId": "fc77054b-7d25-44b8-c6ec-24049a1275e8",
+        "outputId": "76fc9f64-2485-431b-b2b8-ae913a548190",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
         }
       },
       "source": [
-        "RFPrediction.head()"
+        "SVRPrediction.head()"
       ],
-      "execution_count": 119,
+      "execution_count": 153,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8698,31 +8698,31 @@
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>541</td>\n",
-              "      <td>264518.376819</td>\n",
+              "      <td>252489.341580</td>\n",
               "      <td>248000.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>1164</td>\n",
-              "      <td>180680.841857</td>\n",
+              "      <td>203084.084855</td>\n",
               "      <td>194000.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>1112</td>\n",
-              "      <td>124683.271426</td>\n",
+              "      <td>126652.538344</td>\n",
               "      <td>129900.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>518</td>\n",
-              "      <td>196847.371228</td>\n",
+              "      <td>212356.618023</td>\n",
               "      <td>211000.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>901</td>\n",
-              "      <td>141702.268030</td>\n",
+              "      <td>144493.870470</td>\n",
               "      <td>153000.0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -8731,17 +8731,17 @@
             ],
             "text/plain": [
               "     Id      SalePrice  TrueSalePrice\n",
-              "0   541  264518.376819       248000.0\n",
-              "1  1164  180680.841857       194000.0\n",
-              "2  1112  124683.271426       129900.0\n",
-              "3   518  196847.371228       211000.0\n",
-              "4   901  141702.268030       153000.0"
+              "0   541  252489.341580       248000.0\n",
+              "1  1164  203084.084855       194000.0\n",
+              "2  1112  126652.538344       129900.0\n",
+              "3   518  212356.618023       211000.0\n",
+              "4   901  144493.870470       153000.0"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 119
+          "execution_count": 153
         }
       ]
     },
@@ -8903,16 +8903,16 @@
       "metadata": {
         "id": "weyixKVE_E7Q",
         "colab_type": "code",
-        "outputId": "08cff59d-25d5-4fad-8f61-893e4984434f",
+        "outputId": "aaca76b5-3c33-4278-fa09-f8eb35f038f4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
         }
       },
       "source": [
-        "RFPrediction.head()"
+        "SVRLPrediction.head()"
       ],
-      "execution_count": 124,
+      "execution_count": 152,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8945,31 +8945,31 @@
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>541</td>\n",
-              "      <td>264518.376819</td>\n",
+              "      <td>254422.171599</td>\n",
               "      <td>248000.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>1164</td>\n",
-              "      <td>180680.841857</td>\n",
+              "      <td>201528.536088</td>\n",
               "      <td>194000.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>1112</td>\n",
-              "      <td>124683.271426</td>\n",
+              "      <td>113461.068174</td>\n",
               "      <td>129900.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>518</td>\n",
-              "      <td>196847.371228</td>\n",
+              "      <td>207807.645145</td>\n",
               "      <td>211000.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>901</td>\n",
-              "      <td>141702.268030</td>\n",
+              "      <td>154065.449702</td>\n",
               "      <td>153000.0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -8978,17 +8978,17 @@
             ],
             "text/plain": [
               "     Id      SalePrice  TrueSalePrice\n",
-              "0   541  264518.376819       248000.0\n",
-              "1  1164  180680.841857       194000.0\n",
-              "2  1112  124683.271426       129900.0\n",
-              "3   518  196847.371228       211000.0\n",
-              "4   901  141702.268030       153000.0"
+              "0   541  254422.171599       248000.0\n",
+              "1  1164  201528.536088       194000.0\n",
+              "2  1112  113461.068174       129900.0\n",
+              "3   518  207807.645145       211000.0\n",
+              "4   901  154065.449702       153000.0"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 124
+          "execution_count": 152
         }
       ]
     },
@@ -9206,6 +9206,23 @@
           "execution_count": 129
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "auqMK-iNi0ym",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Si se quiere predecir con el dataset de Kaggle simplemente reemplazar:\n",
+        "\n",
+        "# Model: asignación de alguno de los 5 modelos.\n",
+        "\n",
+        "# SaleModelGen = Model.predict(X_testReal)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -9745,12 +9762,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 173
         },
-        "outputId": "b3bac670-8254-4cad-b97c-e764a47d9b3c"
+        "outputId": "35d66d89-7de0-45ab-9d58-b9c0a28d72da"
       },
       "source": [
         "df_types"
       ],
-      "execution_count": 146,
+      "execution_count": 151,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9776,12 +9793,10 @@
               "      <th></th>\n",
               "      <th></th>\n",
               "      <th>Error de validación</th>\n",
-              "      <th>IC(std)</th>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Tecnica</th>\n",
               "      <th># de características seleccionadas</th>\n",
-              "      <th></th>\n",
               "      <th></th>\n",
               "    </tr>\n",
               "  </thead>\n",
@@ -9790,41 +9805,32 @@
               "      <th>SVM sin selección</th>\n",
               "      <th>246</th>\n",
               "      <td>0.012334</td>\n",
-              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th rowspan=\"2\" valign=\"top\">SVM + SFS</th>\n",
               "      <th>20</th>\n",
               "      <td>1.01764</td>\n",
-              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>80</th>\n",
               "      <td>1.01297</td>\n",
-              "      <td>0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "                                                     Error de validación  \\\n",
-              "Tecnica           # de características seleccionadas                       \n",
-              "SVM sin selección 246                                           0.012334   \n",
-              "SVM + SFS         20                                             1.01764   \n",
-              "                  80                                             1.01297   \n",
-              "\n",
-              "                                                     IC(std)  \n",
-              "Tecnica           # de características seleccionadas          \n",
-              "SVM sin selección 246                                      0  \n",
-              "SVM + SFS         20                                       0  \n",
-              "                  80                                       0  "
+              "                                                     Error de validación\n",
+              "Tecnica           # de características seleccionadas                    \n",
+              "SVM sin selección 246                                           0.012334\n",
+              "SVM + SFS         20                                             1.01764\n",
+              "                  80                                             1.01297"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 146
+          "execution_count": 151
         }
       ]
     },
@@ -10150,12 +10156,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "59cbdc76-92be-4a32-d57b-f6eca5e10de6"
+        "outputId": "b960cc22-2d17-4ef4-b6c1-7a8669b66f66"
       },
       "source": [
         "RLMEPrediction.head()"
       ],
-      "execution_count": 138,
+      "execution_count": 158,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10225,7 +10231,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 138
+          "execution_count": 158
         }
       ]
     },
